# bevy_stroked_text

./: Cargo.toml  README.md
examples/: scaled.rs  simple.rs
src/: lib.rs
