[package]
name = "bevy_stroked_text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
  "bevy_render",
  "bevy_asset",
  "bevy_text",
] }

[dev-dependencies]
bevy = { version = "0.12", default-features = false, features = [
  "bevy_render",
  "bevy_asset",
  "bevy_sprite",
  "bevy_winit",
  "bevy_core_pipeline",
  "x11",
  "default_font",
] }
