[package]
name = "bevy_stroked_text"
version = "0.2.0"
edition = "2021"
description = "A Bevy plugin for stroked text rendering"
categories = ["game-development"]
authors = ["Luan Santos"]
keywords = ["gamedev", "bevy", "bevy_text"]
repository = "https://github.com/luan/bevy_stroked_text"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_render",
    "bevy_asset",
    "bevy_text",
] }

[dev-dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_render",
    "bevy_asset",
    "bevy_sprite",
    "bevy_winit",
    "bevy_core_pipeline",
    "x11",
    "default_font",
] }
